--- a/style/style.css
+++ b/style/style.css
@@ -434,6 +434,10 @@ body {
     display: flex;
     flex-direction: column;
     row-gap: 5px; }
+    .register__form form label {
+      display: flex;
+      align-items: center;
+      column-gap: 10px; }
     .register__form form input {
       height: 35px;
       border: none;
